gcc-defaults (1.122) UNRELEASED; urgency=low

  [ Matthias Klose ]
  * Update maintainer list.

  [ Aurelien Jarno ]
  * Default to 4.8 for mips and mipsel architectures.

 -- Matthias Klose <doko@debian.org>  Thu, 13 Jun 2013 12:38:49 +0200

gcc-defaults (1.121) unstable; urgency=low

  * Bump GCC 4.8 versions to 4.8.1.
  * Bump GCC 4.7 versions to 4.7.3.
  * Bump GCC 4.6 versions to 4.6.4.
  * Default to 4.8 for all x86 architectures.
  * Default to 4.8 for ARM architectures (agreed by the ARM porters).
  * Default gdc to 4.8 for every architecture.
  * Default gij/gcj to 4.8 for every architecture.
  * Stop building the gdc-v1 package.
  * Add support for x32 (Daniel Schepler). Closes: #692140.
  * Fix broken symlink in gcj-jre-headless. Closes: #710471.
  * Fix gcj package descriptions. Closes: #652495.

 -- Matthias Klose <doko@debian.org>  Wed, 12 Jun 2013 23:11:47 +0200

gcc-defaults (1.120) unstable; urgency=low

  * Bump GCC 4.7 versions to 4.7.2.
  * Don't try to update the libgcj-db database for 4.5, removed for
    the wheezy release. Closes: #620582, #626600.

 -- Matthias Klose <doko@debian.org>  Thu, 27 Sep 2012 02:00:03 +0200

gcc-defaults (1.119) unstable; urgency=low

  [ Matthias Klose ]
  * Bump gcc-4.7 version to 4.7.1.
  * Provide gcc-{ar,nm,ranlib} for architectures with 4.7 as the default.
  * Update README.Debian for Wheezy. Closes: #675026.

  [Hiroyuki Yamamoto]
  * Build gccgo on ppc64. Closes: #668861.

 -- Matthias Klose <doko@debian.org>  Tue, 26 Jun 2012 03:05:15 +0200

gcc-defaults (1.118) unstable; urgency=low

  * Default to GCC 4.7 for gcc, g++, gfortran on amd64, i386,
    kfreebsd-amd64, kfreebsd-i386 and hurd-i386.

 -- Matthias Klose <doko@debian.org>  Mon, 07 May 2012 17:30:36 +0200

gcc-defaults (1.117) unstable; urgency=low

  [ Samuel Thibault ]
  * Default gij/gcj to 4.7 on the Hurd too.

  [ Matthias Klose ]
  * Default the spu cross compilers to 4.7.
  * Check for gcj-4.7 in rebuild-gcj-db.