@@ -6,7 +6,7 @@ Uploaders: Matthias Klose <doko@debian.org>
 Standards-Version: 3.9.4
 Build-Depends: m4, debhelper (>= 5),
   dpkg-dev (>= 1.16.0~ubuntu4),
-  gcc-4.8-base (>= 4.8.1-2~),
+  gcc-4.8-base (>= 4.8.1-4~),
   lsb-release
 Build-Depends-Indep: ca-certificates,
   gcj-jdk, python (>= 2.6.6)
@@ -140,7 +140,7 @@ Description: Go compiler, based on the GCC backend
 Package: gccgo-multilib
 Priority: optional
 Architecture: amd64 i386 mips mipsel powerpc ppc64 s390 s390x x32
-Depends: cpp (>= ${version:cpp}), gcc-multilib (>= ${version:cpp}), gccgo (>= ${version:gcc}), gccgo-${pv:ggo}-multilib ${reqv:ggo}, ${misc:Depends}
+Depends: cpp (>= ${version:cpp}), gcc-multilib (>= ${version:cpp}), gccgo (>= ${version:ggo}), gccgo-${pv:ggo}-multilib ${reqv:ggo}, ${misc:Depends}
 Description: Go compiler, based on the GCC backend (multilib files)
  This is the GNU Go compiler, which compiles Go on platforms supported by
  the gcc compiler. It uses the gcc backend to generate optimized code.
