@@ -150,7 +150,7 @@ REQV_45		:= (>= 4.5.3-1)
 REQV_46		:= (>= 4.6.4-1~)
 REQV_46_GDC	:= $(REQV_46)
 REQV_47		:= (>= 4.7.3-1~)
-REQV_48		:= (>= 4.8.1-2~)
+REQV_48		:= (>= 4.8.1-4~)
 
 REQV_LIBGCJ_BC	:= (>= 4.6.4-1~)
 
@@ -170,7 +170,7 @@ CV_GPP		:= 4.6.4-$(REL_NO_464)
 CV_GOBJC	:= 4.6.4-$(REL_NO_464)
 CV_GOBJCXX	:= 4.6.4-$(REL_NO_464)
 CV_GFORT	:= 4.6.4-$(REL_NO_464)
-CV_GGO		:= 4.7.3-$(REL_NO_473)
+CV_GGO		:= 4.8.1-$(REL_NO_481)
 CV_GCJ		:= 4.6.4-$(REL_NO_464)
 CV_GIJ		:= 4.6.4-$(REL_NO_464)
 CV_LIBGCJBC	:= 4.6.4-$(REL_NO_464)
@@ -199,7 +199,7 @@ REQV_GPP	= $(REQV_46)
 REQV_GOBJC	= $(REQV_46)
 REQV_GOBJCXX	= $(REQV_46)
 REQV_GFORT	= $(REQV_46)
-REQV_GGO	= $(REQV_47)
+REQV_GGO	= $(REQV_48)
 REQV_GCJ	= $(REQV_46)
 REQV_GIJ	= $(REQV_46)
 REQV_GDC	= $(REQV_48)
